k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-service
  labels:
    name: payment-service
    app: payment-service
