k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: devtrip
spec:
  selector:
    app: payment-service
  ports:
  - port: 8081
    targetPort: 8081
